change name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mathlive",
+  "name": "tinymathlive",
   "version": "0.98.4",
   "description": "A customed version of Mathlive from Arno Gourdol",
   "license": "MIT",
